start of GUI, only exe file choosing button actually works

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿################################################################################
+################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
@@ -19,3 +19,6 @@
 !Natural_selector.txt
 !rust_test.exe
 !log.txt
+!/GUI/venv/*
+!/GUI/.idea/*
+!/GUI/__pycache__/*
