--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 !MSDNScrapes.txt
 !Natural_selector.txt
 !rust_test.exe
-!log.txt
 !/GUI/venv/*
 !/GUI/.idea/*
 !/GUI/__pycache__/*
+!/stringsModule/*
